# my-python-projects

./: .cursorrules  .gitignore  README.md  pyproject.toml
easy_data_transfm/: count_num.py  data_proc.py  modules.py  train.py
easy_data_transfm/util/: input.txt
play_ground/: count_num.py  strawberry.md
prof/: ____batch_type.prof  combined.prof
projects/project_bloom560m_easyEN2SP/: bloom560m_easyEN2SP.py  bloom_560m.py  masked_easy_ds_EN_to_SP.py  train_bloom_560m.py
projects/trainAdd/: train.py  train_manage.py
projects/trainAdd/data_proc/: data_make.py  datamodule.py
projects/trainAdd/model/: lightning_model.py  modules.py
projects/utils/: check_encoding.py  utils.py
src/: bloom560m_easyEN2SP.py  bloom_560m.py  easy_ds_EN_to_SP.py  easy_gpt.py  hund_testing_arc.py  masked_easy_ds_EN_to_SP.py  play_transformer.py  train_bloom_560m.py
src/autonomaus_ai_coding/: main.py
src/data_process/arc/: arc_preprocess.py
src/inventory_chart/: days_of_inventory.py  inventory_chart.py  item_metrics.py  plot_settings.py  safety_stock.py  test_inventory_chart.py
src/my_util/: check_encoding.py  mlflow_expriment_manage.py
src/my_util/model/: gpt.py  lightning_model.py
src/my_utils/: utils.py  ログ設定.py
src/my_utils/model/: gpt.py  lightning_model.py  modules.py
src/new_chart/: breakeven_chart.py  chart_utils.py  summary_chart.py  判断基準.txt
src/trainAdd/: train.py  train_manage.py
src/trainAdd/data_proc/: data_make.py  datamodule.py  torch2_test.py  torch_test.py  足し算datamodule.py  (+2 more)
trainAdd/: setup.py  train.py
trainAdd/model/: gpt.py  modules.py
(+2 files in other folders)
