# [build-system] 
# requires = ["hatchling"]
# build-backend = "hatchling.build"
#このビルドツールが悪さをしている。cp932~というエラーを吐く。

[project]
name = "projects"
version = "1.0.0"
readme = "README.md"
authors = [  { name="Sose1" },]
license = {text = "MIT License"}
requires-python = ">=3.10.9"

dependencies = [
    "chardet>=5.2.0",
    "lightning>=2.4.0",
    "mlflow>=2.17.1",
    "pynvml>=11.5.3",
    "pyperclip>=1.9.0",
    "torch==2.5.0+cu121",
    "torchtune>=0.3.1",
    "torchvision==0.20.0+cu121",
]

[tool.uv.sources]
torch = { index = "torch-cuda" }
torchvision = { index = "torch-cuda" }

[[tool.uv.index]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.pytest.ini_options]
minversion = "6.0"
python_files = "*.py"
addopts = "-vv -s "
testpaths = "src"
markers = [
    "unit: mark a test as a unit test",
    "integration: mark a test as an integration test",
]
